Fix z-index

--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -12,6 +12,7 @@
     top: 0;
     transition: height 0.5s ease;
     width: 100%;
+    z-index: 100;
 
     @media (min-width: $desktop-bp) {
         font-size: 3rem;
